--- a/app/src/main/res/layout/fragment_today_weather.xml
+++ b/app/src/main/res/layout/fragment_today_weather.xml
@@ -38,6 +38,18 @@
                 android:text="14 C"
                 android:textSize="50sp"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textview_max_min_temp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="30 / 10"/>
+            </LinearLayout>
+
         </LinearLayout>
 
         <TextView
