--- a/app/src/main/res/layout/fragment_today_weather.xml
+++ b/app/src/main/res/layout/fragment_today_weather.xml
@@ -27,7 +27,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/common_google_signin_btn_icon_dark_normal"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textview_description"
+        app:layout_constraintStart_toStartOf="@+id/textview_description"
         app:layout_constraintTop_toBottomOf="@+id/textview_city_name" />
 
     <TextView
@@ -38,31 +39,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        android:textSize="40sp"
-        app:layout_constraintEnd_toStartOf="@+id/textview_temperature_max"
+        android:textSize="50sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/img_weather"
         app:layout_constraintTop_toTopOf="@+id/img_weather"
         tools:text="30.00°C" />
-
-    <TextView
-        android:id="@+id/textview_temperature_max"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:text="max: 35°C"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textview_temperature" />
-
-    <TextView
-        android:id="@+id/textview_temperature_min"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:text="min: 20°C"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/textview_temperature"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textview_description"
@@ -72,7 +53,7 @@
         android:layout_marginTop="8dp"
         android:text="clear sky"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/img_weather"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_weather" />
 
     <ProgressBar
@@ -88,5 +69,69 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textview_humidity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="textview_humidity"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textview_description" />
+
+    <TextView
+        android:id="@+id/textview_pressure"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="textview_pressure"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textview_humidity" />
+
+    <TextView
+        android:id="@+id/textview_wind"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="textview_wind"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textview_pressure" />
+
+    <TextView
+        android:id="@+id/textview_sunrise"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:text="textview_sunrise"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textview_temperature" />
+
+    <TextView
+        android:id="@+id/textview_sunset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:text="textview_sunset"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textview_sunrise" />
+
+
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/lineChart"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textview_wind" />
+
 
 </android.support.constraint.ConstraintLayout>
