--- a/app/src/main/res/layout/fragment_today_weather.xml
+++ b/app/src/main/res/layout/fragment_today_weather.xml
@@ -126,12 +126,22 @@
         app:layout_constraintTop_toBottomOf="@+id/textview_sunrise" />
 
 
-    <com.github.mikephil.charting.charts.LineChart
+    <com.github.mikephil.charting.charts.CombinedChart
         android:id="@+id/lineChart"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="250sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textview_wind" />
+
+    <TextView
+        android:id="@+id/textviewRain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:text="textviewRain"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textview_sunset" />
 
 
 </android.support.constraint.ConstraintLayout>
